# system-software

./: .gitignore  README.md
lab-01-library-manager/: README.md  file_operations.h  library.csv  library.h
lab-02-moving-average-filter/: CMakeLists.txt  README.md  requirements.txt
lab-02-moving-average-filter/data/: filtered_data.csv  temperature_data.csv
lab-02-moving-average-filter/include/: filter.h  io.h
lab-02-moving-average-filter/scripts/: fetch_data.py
lab-02-moving-average-filter/src/: low_pass_filter.c
lab-03-traffic-light-controller/: CMakeLists.txt  README.md
lab-03-traffic-light-controller/include/: error_codes.h
lab-03-traffic-light-controller/src/: main.c  traffic_light.c
lab_1/: Makefile  README.md  file_operations.c  library.c  main.c
lab_2/: README.md
lab_2/include/: error_codes.h
lab_2/scripts/: plot_data.py
lab_2/src/: filter.c  io.c  ma_filter.c  main.c
lab_3/: README.md
lab_3/include/: traffic_light.h
